--- a/style.css
+++ b/style.css
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Página da Aula</title>
+  <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Márcio Borzuk da Fonseca</h1>
+    <a href="index.html" class="botao">Voltar</a>
+  </div>
+</body>
+</html>
